# normlite

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  changelog.html  genindex.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.doctrees/: changelog.doctree  index.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: ci.yml  docs.yml  release.yml  tag-and-deploy.yml
_modules/: index.html
_modules/normlite/: _constants.html  cursor.html  exceptions.html
autoapi/: index.html
autoapi/normlite/: index.html
docs/: advanced-guide-ddl-pipeline.md  advanced-guide-dml-pipeline-crud.md  advanced-guide-execution-pipeline.md  advanced-guide-reflection.md  advanced-guide-rowcount-preservation.md  advanced-guide.md  changelog.md  conf.py  contributing.md  get-started.md  index.md  releasing.md  user-guide-table-reflection.md  user-guide-working-with-crud-statements.md  user-guide-working-with-databases.md  user-guide.md
docs/_static/: custom.css
docs/adr/: 0001-update-two-phase-values-threading.md  0002-fake-client-lax-fk-validation.md  0003-engine-dispose-semantics.md  0004-expression-hierarchy-modifier-vs-column.md  0005-outer-join-phantom-null-semantics.md  0006-join-result-row-shape.md  0007-join-dangling-fk-propagation.md  0008-joinexecution-seam.md  0009-result-schema-provenance.md  0010-streaming-result-token-pagination.md  0011-aggregate-execution-seam.md  0012-checkconstraint-client-side-enforcement.md  0013-checkconstraint-catalog-persistence.md  0014-data-source-two-id-identity.md  0015-catalog-soft-delete-explicit-property.md  0016-dropped-table-is-non-existent.md  0017-hidden-system-columns.md  0018-query-plan-operator-tree.md  0019-sql-null-semantics-pushdown-soundness.md  0020-execution-layering-sql-builds-engine-drives.md  0021-scan-both-hash-join.md
docs/agents/: domain.md
docs/html/: .buildinfo  changelog.html  genindex.html  index.html  license.html  objects.inv  objects.txt  py-modindex.html  search.html  searchindex.js
examples/: bulk_insert.py  create_table_and_insert_rows.py  delete_returning.py  insert_returning.py  update_returning.py
plans/: streaming-token-pagination-teaching-slices.md
plans/version-0.9.0/: 167-add-bulk-stmts-devplan.md
src/normlite/: __init__.py  _constants.py  connection.py  cursor.py  engine.py  exceptions.py  sql.py  transaction.py  utils.py
src/tools/: build_notion_store.py
tests/: README.md  conftest.py  fixtures.json  test_connection.py  test_connexe_exploration.py  test_context.py  test_context_refactored.py  test_create_new_database.py  test_create_table.py  test_cursorresult.py  test_dbapi2.py  test_dbapi2_cursor.py  test_ddl.py  test_ddl_compiler.py  test_delete.py  test_delete_exec_pipe.py  test_dml.py  test_drop_table.py  test_engine.py  test_engine_helpers.py  test_exec_opts.py  test_init_script.py  test_insert.py  test_multicursorresult.py  test_notion_sdk.py  test_notion_sdk_clients.py  test_notion_sdk_filebased_client.py  test_notion_sdk_in_memory_client.py  test_notion_sdk_inmemclient.py  test_notion_sdk_query_db.py  test_notiondbapi.py  test_notiondbapi_connection.py  test_notiondbapi_model.py  test_notionsdk_clients.py  test_page_parser.py  test_proxy.py  test_reflection.py  test_result_set.py  test_row.py  test_schema.py  (+11 more)
tests/ast/: test_ast_axioms.py
tests/axioms/: test_compiler_axioms.py  test_eval_axioms.py  test_nc_axioms.py
tests/compiler/: test_compiler_axioms.py  test_compiler_differential.py  test_pycompiler.py
tests/differential/: test_compiler_differential.py  test_differential.py  test_eval_differential.py
(+467 files in other folders)
