[project]
name = "normlite"
version = "0.2.0"
description = "An SQL frontend to Notion databases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "myst-nb>=1.3.0",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
addopts = [  
    "-v",  
    "-s",  
] 
pythonpath = ["src"]
