[project]
name = "normlite"
version = "0.7.0"
description = "An SQL frontend to Notion databases."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Gianmarco Antonini", email="giant0791@googlemail.com" },
]
license = { text = "AGPL-3.0-or-later" }
keywords = ["example", "notion", "integration"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
    "waitress>=3.0.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "faker>=38.0.0",
    "myst-nb>=1.3.0",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphobjinv>=2.3.1.3",
    "commitizen>=3.24.0",
    "furo>=2025.9.25",
]

[tool.pytest.ini_options]
addopts = [  
    "-v",  
    "-s",  
] 
pythonpath = ["src"]
